--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 domain = { path = "../domain" }
 tokio = { version = "1", features = ["full"] }
+async-trait = "0.1.72"
