--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -10,3 +10,4 @@ domain = { path = "../domain" }
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1.72"
 rand = "0.8"
+futures-util = "0.3.28"
