--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -11,3 +11,9 @@ tokio = { version = "1", features = ["full"] }
 async-trait = "0.1.72"
 rand = "0.8"
 futures-util = "0.3.28"
+tungstenite = {version = "0.16.0", features = ["native-tls"]}
+url = "2.2.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_derive = "1.0"
+serde_json = "1.0"
+async-stream = "0.3.5"
