--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -17,3 +17,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 async-stream = "0.3.5"
+reqwest = { version = "0.11", features = ["json"] }
