--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -18,3 +18,4 @@ serde_derive = "1.0"
 serde_json = "1.0"
 async-stream = "0.3.5"
 reqwest = { version = "0.11", features = ["json"] }
+rust_decimal = "1.32"
