--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1.0"
 async-stream = "0.3.5"
 reqwest = { version = "0.11", features = ["json"] }
 rust_decimal = "1.32"
+anyhow = "1.0.75"
