--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -12,4 +12,4 @@ crossbeam = "0.8"
 async-trait = "0.1.72"
 futures-util = "0.3.28"
 rust_decimal = "1.32"
-anyhow = "1.0.75"
+anyhow = { version = "1.0", features = ["backtrace"] }
