--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -11,7 +11,7 @@ tokio = { version = "1", features = ["full"] }
 async-trait = "0.1.72"
 rand = "0.8"
 futures-util = "0.3.28"
-tungstenite = {version = "0.16.0", features = ["native-tls"]}
+tungstenite = { version = "0.16.0", features = ["native-tls"] }
 url = "2.2.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
@@ -19,4 +19,6 @@ serde_json = "1.0"
 async-stream = "0.3.5"
 reqwest = { version = "0.11", features = ["json"] }
 rust_decimal = "1.32"
-anyhow = "1.0.75"
+# anyhow = "1.0.75"
+eyre = "0.6"
+color-eyre = "0.5"
