--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -12,6 +12,5 @@ crossbeam = "0.8"
 async-trait = "0.1.72"
 futures-util = "0.3.28"
 rust_decimal = "1.32"
-# anyhow = { version = "1.0", features = ["backtrace"] }
-eyre = "0.6"
-color-eyre = "0.5"
+serde_json = "1.0"
+thiserror = "1.0"
