--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -29,3 +29,7 @@ actix = "0.13"
 actix-rt = "2.2"
 derive_builder = "0.10"
 getset = "0.1"
+# Telemetry
+opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
+opentelemetry = { version = "0.22", features = ["metrics"] }
+opentelemetry-stdout = { version = "0.3", features = ["metrics"] }
