--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -17,6 +17,6 @@ thiserror = "1.0"
 tokio-stream = "0.1"
 actix = "0.13"
 derive_builder = "0.10"
-getset = "0.1"
+derive-getters = "0.3"
 strum = "0.26"
 strum_macros = "0.26"
