back to using getset

--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -17,6 +17,6 @@ thiserror = "1.0"
 tokio-stream = "0.1"
 actix = "0.13"
 derive_builder = "0.10"
-derive-getters = "0.3"
+getset = "0.1.2"
 strum = "0.26"
 strum_macros = "0.26"
