--- a/data_provider/Cargo.toml
+++ b/data_provider/Cargo.toml
@@ -20,3 +20,5 @@ thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
+url = "2.2.2"
+rust_decimal = "1.32"
