--- a/data_forwarder/Cargo.toml
+++ b/data_forwarder/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 domain = { path = "../domain" }
+data_providers = { path = "../data_providers" }
 tokio = { version = "1", features = ["full"] }
+futures-util = "0.3.28"
+serde_json = "1.0"
 eyre = "0.6"
 color-eyre = "0.5"
 actix-web = "4"
