--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -12,6 +12,7 @@ crossbeam = "0.8"
 async-trait = "0.1.72"
 futures-util = "0.3.28"
 rust_decimal = "1.32"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 tokio-stream = "0.1"
